--- a/charts/coco-supported/kbs-access/templates/secure-pod.yaml
+++ b/charts/coco-supported/kbs-access/templates/secure-pod.yaml
@@ -21,17 +21,11 @@ spec:
           name: kbsref
   initContainers:
   - name: curl
-    image: registry.redhat.io/ubi9/ubi:latest # Lightweight image with curl installed
+    image: registry.access.redhat.com/ubi9/ubi:latest # Lightweight image with curl installed
     command: ['sh', '-c', 'curl -s http://127.0.0.1:8006/cdh/resource/default/kbsres1/key3 > /output/kbsres1.txt']
     volumeMounts:
     - name: output-volume
       mountPath: /output
-  # - name: hi
-  #   image: registry.redhat.io/ubi9/ubi:latest # Lightweight image with curl installed
-  #   command: ['sh', '-c', 'echo "hi" > /output/kbsres1.txt']
-  #   volumeMounts:
-  #   - name: output-volume
-  #     mountPath: /output
   volumes:
   - name: output-volume
     emptyDir: {}
