fix: remove gzipper and use newly available gzip
Signed-off-by: Chris Butler <chris.butler@redhat.com>

--- a/ansible/init-data-gzipper.yaml
+++ b/ansible/init-data-gzipper.yaml
@@ -29,7 +29,7 @@
 
     - name: Gzip the rendered content
       ansible.builtin.shell: |
-        python3 gzipper.py "{{ rendered_path }}" "{{ gz_path }}"
+        gzip -c "{{ rendered_path }}" > "{{ gz_path }}"
       changed_when: true
 
     - name: Read gzip as base64
