--- a/ansible/install-deps.yaml
+++ b/ansible/install-deps.yaml
@@ -8,6 +8,10 @@
       community.general.ansible_galaxy_install:
         type: collection
         name: azure.azcollection
+    - name: Ensure community.crypto collection is installed
+      community.general.ansible_galaxy_install:
+        type: collection
+        name: community.crypto
     - name: Install a Python package
       ansible.builtin.pip:
         requirements: "~/.ansible/collections/ansible_collections/azure/azcollection/requirements.txt"
