feat: allow the use of self-signed certificates with trustee
Signed-off-by: Chris Butler <chris.butler@redhat.com>

--- a/charts/hub/trustee/templates/kbs.yaml
+++ b/charts/hub/trustee/templates/kbs.yaml
@@ -9,8 +9,8 @@ spec:
   kbsDeploymentType: AllInOneDeployment
   kbsRvpsRefValuesConfigMapName: rvps-reference-values
   kbsSecretResources: ["kbsres1", "passphrase", "security-policy"]
-#   kbsHttpsKeySecretName: kbs-https-key
-#   kbsHttpsCertSecretName: kbs-https-certificate
+  kbsHttpsKeySecretName: kbs-https-key
+  kbsHttpsCertSecretName: kbs-https-certificate
   kbsResourcePolicyConfigMapName: resource-policy
 
   # TDX specific configuration (optional)
