--- a/charts/hub/trustee/templates/kbs-config-map.yaml
+++ b/charts/hub/trustee/templates/kbs-config-map.yaml
@@ -7,8 +7,9 @@ data:
   kbs-config.toml: |
     [http_server]
     sockets = ["0.0.0.0:8080"]
-    insecure_http = true
-
+    insecure_http = false
+    private_key = "/etc/https-key/tls.key"
+    certificate = "/etc/https-cert/tls.crt"
     [admin]
     insecure_api = true
     auth_public_key = "/etc/auth-secret/publicKey"
