--- a/charts/hub/trustee/templates/kbs-route.yaml
+++ b/charts/hub/trustee/templates/kbs-route.yaml
@@ -13,5 +13,4 @@ spec:
     name: kbs-service
     weight: 100
   tls:
-    termination: edge
-    insecureEdgeTerminationPolicy: Redirect
+    termination: passthrough
