chore: ansible linting
Signed-off-by: Chris Butler <chris.butler@redhat.com>

--- a/requirements.yml
+++ b/requirements.yml
@@ -2,4 +2,5 @@ collections:
   - azure.azcollection
   # Modules installed by default in the utility container, required for linting
   - community.general
+  - community.crypto
   - kubernetes.core
