feat: add in multicluster support
Signed-off-by: Chris Butler <chris.butler@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ install-config.yaml
 azure-env.sh
 .openshift*
 .DS_Store
-openshift-install
+openshift-install*
 node_modules
 .envrc
 .ansible/
+__pycache__/
