--- a/charts/coco-supported/sandbox/templates/ssh-key-eso.yaml
+++ b/charts/coco-supported/sandbox/templates/ssh-key-eso.yaml
@@ -1,4 +1,4 @@
-{{- if and (ne .Values.global.secretStore.backend "none") (.Values.sandbox.azure) }}
+{{- if and (ne .Values.global.secretStore.backend "none") (eq .Values.global.clusterPlatform "Azure") }}
 ---
 apiVersion: "external-secrets.io/v1beta1"
 kind: ExternalSecret
@@ -19,5 +19,4 @@ spec:
   dataFrom:
   - extract:
       key: {{ .Values.sandbox.sshKey }}
-
-{{ end }}
+{{- end }}
