--- a/values-global.yaml
+++ b/values-global.yaml
@@ -1,5 +1,8 @@
 global:
   pattern: coco-pattern
+  secretStore:
+    # Warning: This must be present even if it is set to none.
+    backend: vault # none, vault, kubernetes
   options:
     useCSV: false
     syncPolicy: Automatic
@@ -9,13 +12,18 @@ global:
   # Defines whether or not the hub cluster can be used for confidential containers
   coco:
     azure:
-      enabled: true
       defaultVMFlavour: "Standard_DC2as_v5"
+      VMFlavours: "Standard_DC2as_v5,Standard_DC4as_v5,Standard_DC8as_v5,Standard_DC16as_v5"
 main:
   # WARNING
   # This default configuration uses a single cluster on azure.
   # It fundamentally violates the separation of duties.
-  clusterGroupName: simple
+  clusterGroupName: trusted-hub
   multiSourceConfig:
     enabled: true
     clusterGroupChartVersion: 0.9.*
+
+# Common secret store configuration used across multiple charts
+secretStore:
+  name: vault-backend
+  kind: ClusterSecretStore
