--- a/charts/coco-supported/hello-openshift/templates/insecure-policy-pod.yaml
+++ b/charts/coco-supported/hello-openshift/templates/insecure-policy-pod.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     io.katacontainers.config.agent.policy: '{{ tpl ( .Files.Get "insecure-policy.rego") . | b64enc }}'
 spec:
-  runtimeClassName: kata-remote
+  runtimeClassName: {{ include "hello-openshift.runtimeClassName" . }}
   containers:
     - name: hello-openshift
       image: quay.io/openshift/origin-hello-openshift
