--- a/charts/coco-supported/hello-openshift/templates/secure-pod.yaml
+++ b/charts/coco-supported/hello-openshift/templates/secure-pod.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     peerpods: "true"
 spec:
-  runtimeClassName: kata-remote
+  runtimeClassName: {{ include "hello-openshift.runtimeClassName" . }}
   containers:
     - name: hello-openshift
       image: quay.io/openshift/origin-hello-openshift
