--- a/charts/coco-supported/hello-openshift/values.yaml
+++ b/charts/coco-supported/hello-openshift/values.yaml
@@ -1,3 +1,6 @@
+# Chart-specific values
+# Common values are inherited from values-global.yaml
+
+# Global values used by this chart (overridden by values-global.yaml)
 global:
-  coco:
-    runtimeClassName: kata-remote
+  clusterPlatform: ""  # Cluster platform: "Azure" or "AWS" - determines runtime class
