--- a/charts/coco-supported/sandbox/values.yaml
+++ b/charts/coco-supported/sandbox/values.yaml
@@ -1,18 +1,18 @@
+# Chart-specific values
+# Common values are inherited from values-global.yaml
+
+# Global values used by this chart (overridden by values-global.yaml)
 global:
-  cocoUpstream: true
-  cocoConverged: true
+  clusterPlatform: ""  # Cluster platform: "Azure" or "AWS"
 
+# Secret store configuration (overridden by values-global.yaml)
 secretStore:
-  name: vault-backend
-  kind: ClusterSecretStore
+  name: ""
+  kind: ""
 
-
-
+# Sandbox-specific configuration
 sandbox:
-  deploy: true
   sshKey: secret/data/global/sshKey
-  azure: true
-  peerpodsCreds: secret/data/global/azure
   # These variables today limit to one cluster
   # revise using imperative framework to infer from cluster vars
   # Strongly advised to override in values-global.yaml or values-{cluster-group}.yaml
