--- a/charts/hub/trustee/templates/kbs-route.yaml
+++ b/charts/hub/trustee/templates/kbs-route.yaml
@@ -4,7 +4,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: kbs
-  namespace: {{ .Values.kbs.deployNS }}
+  namespace: trustee-operator-system
 spec:
   port:
     targetPort: 8080
