--- a/charts/hub/trustee/templates/tls-cert-eso.yaml
+++ b/charts/hub/trustee/templates/tls-cert-eso.yaml
@@ -1,3 +1,4 @@
+{{- if ne .Values.global.secretStore.backend "none" }}
 ---
 apiVersion: "external-secrets.io/v1beta1"
 kind: ExternalSecret
@@ -20,5 +21,4 @@ spec:
       remoteRef:
         key: 'secret/data/pushsecrets/kbs-tls-self-signed'
         property: certificate
-
-
+{{- end }}
